--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>griddly • all at once</title>
     <script src="//code.jquery.com/jquery-1.11.0.js"></script>
-    <link href="style.css">
+    <link rel="stylesheet" href="style.css">
     
     <script src="https://rawgithub.com/ducksboard/gridster.js/master/dist/jquery.gridster.js"></script>
-    <link href="https://rawgithub.com/ducksboard/gridster.js/master/dist/jquery.gridster.css">
+    <link rel="stylesheet" href="https://rawgithub.com/ducksboard/gridster.js/master/dist/jquery.gridster.css">
   </head>
   <body>
     <div id="grid">
