--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <script src="//code.jquery.com/jquery-1.11.0.js"></script>
     <link rel="stylesheet" href="style.css">
     
-    <script src="https://rawgithub.com/ducksboard/gridster.js/master/dist/jquery.gridster.js"></script>
-    <link rel="stylesheet" href="https://rawgithub.com/ducksboard/gridster.js/master/dist/jquery.gridster.css">
+    <script src="http://gridster.net/dist/jquery.gridster.js"></script>
+    <link rel="stylesheet" href="http://gridster.net/dist/jquery.gridster.css">
   </head>
   <body>
     <div id="grid">
