--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       
       $("#grid ul").gridster({
         widget_margins: [10, 10],
-        widget_base_dimensions: [140, 140]
+        widget_base_dimensions: [140, 140],
+        draggable: {
+          handle: 'header'
+        }
       });
      
     });
