--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         widget_margins: [10, 10],
         widget_base_dimensions: [140, 140],
         draggable: {
-          handle: 'drag-handle'
+          handle: '.drag-handle'
         }
       });
      
