--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script type="text/javascript">
     $(function(){
       
-      $("li").prepend('<div class="drag-handle">|||</div>');
+      $("li").prepend('<div class="drag-handle" align="center"></div>');
       
       $("#grid ul").gridster({
         widget_margins: [10, 10],
