--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
     $(function(){ //DOM loaded
       $("#grid ul").gridster({
-        widget_margins: [10, 1
+        widget_margins: [10, 10],
         widget_base_dimensions: [140, 140],
         draggable: {
           handle: '.drag-handle'
