--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     }
     
     function addHandles(){
+      $(".drag-handle").remove();
       $("li").prepend('<div class="drag-handle" align="center"></div>');
     }
   </script>
