--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       addHandles();
       
       $(".content > iframe").parent().css("padding","0px");
+      $(".content > iframe").attr("seamless","seamless").attr("width","100%").attr("height","100%");
     }
     
     function saveLayout(){
