--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
       $("#grid ul").gridster({
         widget_margins: [10, 10],
         widget_base_dimensions: [140, 140],
-        draggable: {
-          handle: '.drag-handle'
-        },
+        helper: 'clone',
         resize: {
           enabled: true
         }
