--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
           enabled: true
         }
       });
+      grid.resizable({resize:{enabled:true}});
+      
       $("li").css("position","absolute");
       addHandles();
       
