--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     function addHandles(){
       $(".drag-handle").remove();
       $("li").prepend('<div class="drag-handle" align="center"></div>');
+      $("li").append('<span class="gs-resize-handle gs-resize-handle-both"></span>');
     }
     
     function firstTimeInit(){
