--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="http://techfoobar.com/jquery-style-listener/stylelistener.jquery.js"></script>
     
     <script src="https://rawgithub.com/malihu/malihu-custom-scrollbar-plugin/master/jquery.mCustomScrollbar.js"></script>
-    <link href="jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css">
+    <link href="jquery.mCustomScrollBar.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="grid">
