--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     }
     
     function initCSB(){
-      $(".content").mCustomScrollbar({
+      $("iframe").mCustomScrollbar({
         theme:"dark-thick"
       });
     }
