--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
       $(".content > iframe").parent().css("padding","0px");
       initFrames();
       
-      createListeners();
+      $('li').styleListener({
+        styles: ['height'],
+        changed: function(style) {
+          if(style=='height')
+            updateFrames();
+        }
+      });
     }
     
     function initFrames(){
