--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     function addHandles(){
       $(".drag-handle").remove();
       $("li").prepend('<div class="drag-handle" align="center"></div>');
-      $*(".gs-resize-handle").remove();
+      $(".gs-resize-handle").remove();
       $("li").append('<span class="gs-resize-handle gs-resize-handle-both"></span>');
     }
     
