--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       var $content = $w.find(".content");
       if(!$content.find("textarea").exists()){
         var content = $content.html();
-        $content.html('<textarea style="width: 100%; height: '+$w.height()+'" class="editor" autofocus>'+content+'</textarea>');
+        $content.html('<textarea style="width: 100%; height: '+$w.height()-30+'px" class="editor" autofocus>'+content+'</textarea>');
       }
       
     }
