--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://rawgithub.com/carhartl/jquery-cookie/master/jquery.cookie.js"></script>
     
     <link rel="stylesheet" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Ubuntu:400,700,400italic' rel='stylesheet' type='text/css'>
     
     <script src="http://gridster.net/dist/jquery.gridster.js"></script>
     <link rel="stylesheet" href="http://gridster.net/dist/jquery.gridster.css">
