--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://rawgithub.com/dmauro/Keypress/development/keypress.js"></script>
     
     <script src="https://rawgithub.com/griddly/griddly.github.io/master/markdownToHtml.js"></script>
+    <script src="https://rawgithub.com/griddly/griddly.github.io/master/htmlToMarkdown.js"></script>
     
     <!--<script src="https://rawgithub.com/malihu/malihu-custom-scrollbar-plugin/master/jquery.mCustomScrollbar.js"></script>
     <link href="jquery.mCustomScrollBar.css" rel="stylesheet" type="text/css">-->
