--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     }
     
     function createListeners(){
-      $('li').styleListener({
+      $('.gs-w').styleListener({
         styles: ['height'],
         changed: function(style) {
           if(style=='height')
