--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         widget_margins: [10, 10],
         widget_base_dimensions: [140, 140],
         draggable: {
-          handle: 'header'
-        }
+          handle: '.drag-handle'
+        },
         resize: {
           enabled: true
         }
